Add the articles to the nav side bar thingee.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,6 +17,11 @@
 
 - title: Code of conduct
   url: /code-of-conduct
-  excerpt:
+  excerpt: 
   image:
+
+- title: Articles
+  url: /articles
+  excerpt: "Dispatches from the fronts of science"
+  image: 
 
