--- a/circle.yml
+++ b/circle.yml
@@ -12,8 +12,8 @@ general:
 
 test:
   override:
-    - BASEURL=https://circle-artifacts.com/gh/$CIRCLE_USERNAME/nipy-jekyll/$CIRCLE_PREVIOUS_BUILD_NUM/artifacts/0/home/ubuntu/nipy-jekyll/_site/
+    - BASEURL=https://circle-artifacts.com/gh/$CIRCLE_USERNAME/nipy.github.io/$CIRCLE_PREVIOUS_BUILD_NUM/artifacts/0/home/ubuntu/nipy.github.io/_site/
     - echo $BASEURL
-    - sed -i "s,/nipy-jekyll/,$BASEURL,g" "_config.yml"
+    - sed -i "s,'/,'$BASEURL,g" "_config.yml"
     - sed -i "s,/page:num/,$BASEURLpage:num/,g" "_config.yml"
     - jekyll build
