--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,6 @@ test:
   override:
     - BASEURL=https://circle-artifacts.com/gh/$CIRCLE_USERNAME/nipy.github.io/$CIRCLE_PREVIOUS_BUILD_NUM/artifacts/0/home/ubuntu/nipy.github.io/_site/
     - echo $BASEURL
-    - sed -i "s,'/,'$BASEURL,g" "_config.yml"
+    - sed -i "s,/,$BASEURL,g" "_config.yml"
     - sed -i "s,/page:num/,$BASEURLpage:num/,g" "_config.yml"
     - jekyll build
