updating link to MNE-python

--- a/_data/packages.yml
+++ b/_data/packages.yml
@@ -73,6 +73,6 @@
       packages:
         - name: "MNE"
           tag: "mne"
-          doc: "http://martinos.org/mne/stable/mne-python.html"
+          doc: "http://martinos.org/mne/stable/index.html"
           github: "https://github.com/mne-tools/mne-python"
           description: "MNE is a software package for processing magnetoencephalography (MEG) and electroencephalography (EEG) data"
