--- a/circle.yml
+++ b/circle.yml
@@ -9,9 +9,11 @@ dependencies:
     - sudo rm -rf /usr/bin/X11/ruby1.8 
     - sudo rm -rf /usr/bin/X11/ruby 
     - sudo rm -rf /usr/share/man/man1/ruby.1.gz
+    - cd $HOME 
     - wget https://cache.ruby-lang.org/pub/ruby/2.2/ruby-2.2.3.tar.gz
     - tar -xzvf ruby-2.2.3.tar.gz
-    - cd ruby-2.2.3
+    - cd $HOME/ruby-2.2.3
+    - bash configure
     - make
     - sudo make install
     - cd $HOME/nipy.github.com
