--- a/circle.yml
+++ b/circle.yml
@@ -20,4 +20,8 @@ general:
 
 test:
   override:
+    - BASEURL=https://circle-artifacts.com/gh/$CIRCLE_USERNAME/nipy.github.com/$CIRCLE_PREVIOUS_BUILD_NUM/artifacts/0/home/ubuntu/nipy.github.com/_site/
+    - echo $BASEURL
+    - sed -i "s,/,$BASEURL,g" "_config.yml"
+    - sed -i "s,/page:num/,$BASEURLpage:num/,g" "_config.yml"
     - jekyll build
