--- a/circle.yml
+++ b/circle.yml
@@ -23,5 +23,5 @@ test:
     - BASEURL=https://circle-artifacts.com/gh/$CIRCLE_USERNAME/nipy.github.com/$CIRCLE_PREVIOUS_BUILD_NUM/artifacts/0/home/ubuntu/nipy.github.com/_site/
     - echo $BASEURL
     - sed -i "s,/,$BASEURL,g" "_config.yml"
-    - sed -i "s,/page:num/,$BASEURLpage:num/,g" "_config.yml"
+    - sed '11 s/.*/baseurl: "$BASEURL"/' "_config.yml"
     - jekyll build
