--- a/circle.yml
+++ b/circle.yml
@@ -20,8 +20,6 @@ general:
 
 test:
   override:
-    - BASEURL=https://circle-artifacts.com/gh/$CIRCLE_USERNAME/nipy.github.com/$CIRCLE_PREVIOUS_BUILD_NUM/artifacts/0/home/ubuntu/nipy.github.com/_site/
-    - echo $BASEURL
-    - sed -i "s,/,$BASEURL,g" "_config.yml"
-    - sed -i "11 s,.*,baseurl: $BASEURL,g" "_config.yml"
+    - chmod u+x circle_urls.sh
+    - bash circle_urls.sh
     - jekyll build
