--- a/circle.yml
+++ b/circle.yml
@@ -22,4 +22,5 @@ test:
     - gem install jekyll-paginate
     - chmod u+x circle_urls.sh
     - bash circle_urls.sh
+    - rm -rf vendor
     - jekyll build
