Change permalink to point to index.html. Sigh :)

--- a/_config.yml
+++ b/_config.yml
@@ -26,4 +26,4 @@ reverse: true
 collections:
   packages:
     output: true
-    permalink: /packages/:path/
+    permalink: /packages/:path/index.html
