--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ author:
   url: "nipy.github.io"
 
 # Build settings
-baseurl: "/"
+baseurl: "/"  # this must be line 11; see circle_urls.sh
 markdown: kramdown
 source: .
-destination: ./_site
+destination: ./_site  # this must be line 14; see circle_urls.sh
 permalink: "/:title"
 paginate: 8
 paginate_path: /page:num/
