--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
   url: "nipy.github.io"
 
 # Build settings
-baseurl: "/"  # this must be line 11; see circle_urls.sh
+baseurl: ""  # this must be line 11; see circle_urls.sh
 markdown: kramdown
 source: .
 destination: ./_site  # this must be line 14; see circle_urls.sh
