modified:   _config.yml 	modified:   _includes/head.html 	modified:   circle.yml

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,14 @@ paginate_path: /page:num/
 version: "1.1.0"
 googleanalytics: "UA-69411900-1"
 
+# SEO
+logo: /img/nipy.png
+authorTwitter: 'nipyorg'
+gems:
+  - jekyll-seo-tag
+  - jekyll-paginate
+
+
 # Options
 reverse: true
 
