--- a/_data/package-categories.yml
+++ b/_data/package-categories.yml
@@ -16,3 +16,6 @@
 - subtitle: "Human Electrophysiology"
   tag: "human-electrophysiology"
   count: 6
+- subtitle: "Data Visualisation"
+  tag: "data-visualisation"
+  count: 1
