--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
 
 test:
   post:
-    - bundle exec htmlproofer ./_site --allow-hash-href --check-favicon --check-html --disable-external
+    - bundle exec htmlproofer ./_site --allow-hash-href --check-html
 
 
 general:
