adding Data Curation as a category, for mindboggle

--- a/_data/package-categories.yml
+++ b/_data/package-categories.yml
@@ -16,6 +16,9 @@
 - subtitle: "Human Electrophysiology"
   tag: "human-electrophysiology"
   count: 6
+- subtitle: "Data Curation"
+  tag: "data-curation"
+  count: 7
 - subtitle: "Data Visualisation"
   tag: "data-visualisation"
-  count: 1
+  count: 7
