--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
               echo "Building Snakey thoughts!"
               chmod u+x circle_urls.sh
               bash circle_urls.sh
-              bundle exec jekyll build
+              bundle exec jekyll build --trace
       - persist_to_workspace:
           root: ./
           paths:
